# ChangeLog for gnome-base/nautilus
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.419 2014/04/27 17:04:07 eva Exp $

*nautilus-3.12.0 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +nautilus-3.12.0.ebuild:
  Version bump for Gnome 3.12.

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -nautilus-3.8.2.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> nautilus-3.10.1.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> nautilus-3.10.1.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> nautilus-3.10.1.ebuild:
  Fix wrong commit, bug 502160

*nautilus-3.10.1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +nautilus-3.10.1.ebuild,
  -nautilus-3.6.3.ebuild, -nautilus-3.8.1.ebuild:
  Version bump for Gnome 3.10

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> nautilus-3.8.2.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> nautilus-3.8.2.ebuild:
  amd64 stable, bug #478252

*nautilus-3.8.2 (18 Jun 2013)

  18 Jun 2013; Pacho Ramos <pacho@gentoo.org> +nautilus-3.8.2.ebuild,
  -nautilus-3.8.0.ebuild:
  Version bump, drop old.

*nautilus-3.8.1 (20 Apr 2013)

  20 Apr 2013; Pacho Ramos <pacho@gentoo.org> +nautilus-3.8.1.ebuild:
  Version bump

  31 Mar 2013; Pacho Ramos <pacho@gentoo.org> nautilus-3.8.0.ebuild:
  GNOME2_LA_PUNT=yes still needed with USE 'sendto'

  31 Mar 2013; Pacho Ramos <pacho@gentoo.org> nautilus-3.8.0.ebuild:
  Update gsettings-desktop-schemas dependency (#463908 by Chris Mayo).

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -files/nautilus-3.2.1-delete.patch,
  -files/nautilus-3.2.1-key-press-forwarding.patch, -nautilus-3.4.2.ebuild:
  Clean up old revision.

*nautilus-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +nautilus-3.8.0.ebuild:
  Version bump for Gnome 3.8
